# safe-airway

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  PROJECT_OVERVIEW.md  README.md  SIZE_ALGORITHMS_DOCUMENTATION.md  build-linux.sh  build-windows.bat  build-windows.ps1  install-qt.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  safe-airway  safe-airway.pro  workflow-diagram.md
src/core/: Application.cpp  Application.h  CaseManager.cpp  CaseManager.h
src/models/: Case.cpp  Case.h  EmergencyScenario.cpp  EmergencyScenario.h
src/utils/: ConfigManager.cpp  ConfigManager.h  SATrachTube.cpp  SATrachTube.h  StyleManager.cpp  StyleManager.h
src/views/: BaseDisplayView.cpp  BaseDisplayView.h  CaseSelectionView.cpp  CaseSelectionView.h  DifficultAirwayFormView.cpp  DifficultAirwayFormView.h  LTRFormView.cpp  LTRFormView.h  MainWindow.cpp  MainWindow.h  NewTracheostomyDisplayView.cpp  NewTracheostomyDisplayView.h  NewTracheostomyFormView.cpp  NewTracheostomyFormView.h  TracheostomyDisplayView.cpp  TracheostomyDisplayView.h  TracheostomyFormView.cpp  TracheostomyFormView.h
src/widgets/: BaseFormWidget.cpp  BaseFormWidget.h  EmergencyPanel.cpp  EmergencyPanel.h  EmergencyPanelOverlay.cpp  EmergencyPanelOverlay.h  EscOverlayMenu.cpp  EscOverlayMenu.h  NotificationWidget.cpp  NotificationWidget.h  PatientInfoWidget.cpp  PatientInfoWidget.h  TextWrapDelegate.cpp  TextWrapDelegate.h  TubeSpecificationWidget.cpp  TubeSpecificationWidget.h
